tests/snapshots/library_frontmatter_and_table.snap
---
source: tests/process_frontmatter_snapshots.rs
expression: process_document(input)
---
---
title: A | table
---

| A | B |
| 1 | 2 |
