tests/snapshots/library_frontmatter_with_dot_closer.snap
---
source: tests/process_frontmatter_snapshots.rs
expression: process_document(input)
---
---
title: Dot closer
...

| A | B |
| 1 | 2 |
