tests/snapshots/library_without_frontmatter.snap
---
source: tests/process_frontmatter_snapshots.rs
expression: process_document(input)
---
| A | B |
| 1 | 2 |
