tests/snapshots/multiple_link_refs.snap
---
source: tests/wrap/link_ref_snapshots.rs
expression: wrap_lines(input)
---
[foo]: https://example.com
[bar]: https://example.org
[baz]: https://example.net
