tests/snapshots/single_link_ref_no_title.snap
---
source: tests/wrap/link_ref_snapshots.rs
expression: wrap_lines(input)
---
[foo]: https://example.com
