tests/snapshots/spanning_code_span_-.snap
---
source: tests/wrap/spanning_code_spans.rs
assertion_line: 55
expression: "output.join(\"\\n\")"
---
- Decision: Make `make kani` a Kani command smoke check using `cargo kani
  --version` until real harnesses land. Rationale: this keeps `4.1.1
  honest as a tooling item, avoids adding a vacuous proof, and leaves `make
  kani-full` as the future full-suite entry point. Date/Author: 2026-05-11 / implementation agent.
