tests/snapshots/spanning_code_span_1_.snap
---
source: tests/wrap/spanning_code_spans.rs
expression: "output.join(\"\\n\")"
---
1. Users can select a CLI theme via layered configuration
   (`CLI > environment > config file > defaults`) using OrthoConfig-backed
   parsing and localized help text.
