tests/snapshots/wrap_text_keeps_escaped_backtick_code_span_atomic_in_list_item.snap
---
source: tests/wrap_unit/code_spans.rs
assertion_line: 111
expression: rendered
---
- Message:
  `Ensure the manifest exists or pass \`--file\` with the correct path.` The
  docs should pin that wording.
